@@ -1,6 +1,6 @@
 dnl  ARM mpn_invert_limb -- Invert a normalized limb.
 
-dnl  Copyright 2001, 2009, 2011 Free Software Foundation, Inc.
+dnl  Copyright 2001, 2009, 2011, 2012 Free Software Foundation, Inc.
 
 dnl  This file is part of the GNU MP Library.
 
@@ -21,8 +21,7 @@ include(`../config.m4')
 
 ASM_START()
 PROLOGUE(mpn_invert_limb)
-	ldr	r2, L(4)
-L(2):	add	r2, pc, r2
+	LEA(	r2, approx_tab-512)
 	mov	r3, r0, lsr #23
 	mov	r3, r3, asl #1
 	ldrh	r3, [r3, r2]
@@ -43,9 +42,6 @@ L(2):	add	r2, pc, r2
 	adc	r3, r3, r0
 	rsb	r0, r3, r2
 	bx	lr
-
-	ALIGN(4)
-L(4):	.word	approx_tab-8-512-L(2)
 EPILOGUE()
 
 	.section .rodata
